// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render select with 1 selected option 1`] = `
<DocumentFragment>
  <div
    class="sg-1iey9hl-formElement ui-shared__form__select formElement ui-shared__form-element"
  >
    <select
      aria-invalid="false"
      class="sg-5x7qyf-select select"
      id="test-name"
      name="test-name"
    >
      <option
        class="option"
        value="DE"
      >
        Germany
      </option>
      <option
        class="option"
        value="US"
      >
        United states
      </option>
    </select>
    <svg
      class="common__icon sg-1ix3ppp-root-chevron"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <div
      class="sg-1fzvff5-underlineWrapper underline"
    >
      <div
        class="sg-ll3grb-underline"
        style="transform: scale3d(0,1,1);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> should render select with 2 options 1`] = `
<DocumentFragment>
  <div
    class="sg-1iey9hl-formElement ui-shared__form__select formElement ui-shared__form-element"
  >
    <select
      aria-invalid="false"
      class="sg-5x7qyf-select select"
      id="test-name"
      name="test-name"
    >
      <option
        class="option"
        value="DE"
      >
        Germany
      </option>
      <option
        class="option"
        value="US"
      >
        United states
      </option>
    </select>
    <svg
      class="common__icon sg-1ix3ppp-root-chevron"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <div
      class="sg-1fzvff5-underlineWrapper underline"
    >
      <div
        class="sg-ll3grb-underline"
        style="transform: scale3d(0,1,1);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> should render select with no options 1`] = `
<DocumentFragment>
  <div
    class="sg-1iey9hl-formElement ui-shared__form__select formElement ui-shared__form-element"
  >
    <select
      aria-invalid="false"
      class="sg-5x7qyf-select select"
      id="test-name"
      name="test-name"
    />
    <svg
      class="common__icon sg-1ix3ppp-root-chevron"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <div
      class="sg-1fzvff5-underlineWrapper underline"
    >
      <div
        class="sg-ll3grb-underline"
        style="transform: scale3d(0,1,1);"
      />
    </div>
  </div>
</DocumentFragment>
`;
